Better plugin management, again.